--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Tailwind CSS Explorer",
   "version": "0.1.0",
   "publisher": "vscode-tailwind-css-explorer",
+  "author": "Peter Mekhaeil <mekhaeil.peter@gmail.com>",
+  "license": "MIT",
   "enableProposedApi": true,
   "engines": {
     "vscode": "^1.50.0"
@@ -44,10 +46,15 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
+    "@types/node": "^14.14.7",
     "@types/vscode": "^1.50.0",
-    "typescript": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
-    "eslint": "^7.1.0"
+    "eslint": "^7.1.0",
+    "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "dlv": "^1.1.3",
+    "glob": "^7.1.6"
   }
 }
