--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "type": "git",
     "url": "https://github.com/petermekhaeil/vscode-tailwindcss-explorer.git"
   },
+  "keywords": [
+    "tailwind",
+    "css"
+  ],
   "license": "MIT",
   "engines": {
     "vscode": "^1.50.0"
