--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write ./src --single-quote"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
@@ -62,6 +63,7 @@
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^7.1.0",
+    "prettier": "2.3.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
