--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vscode-tailwindcss-explorer",
   "displayName": "Tailwind CSS Explorer",
-  "description": "Tailwind CSS Explorer",
+  "description": "Explore the classes available in your project's tailwind setup.",
   "version": "0.6.0",
   "publisher": "PeterMekhaeil",
   "author": "Peter Mekhaeil <mekhaeil.peter@gmail.com>",
